_sass/utilities.scss
.center-image {
  margin: 0 auto;
  display: block;
}

kbd {
  font-family: var(--font-mono);
  font-size: 0.875em;
  background-color: var(--color-code-bg);
  border-radius: 3px;
  box-shadow: 1px 0 1px 0 var(--color-kbd-shadow-1), 0 1px 0 2px var(--color-kbd-shadow-2), 0 2px 0 2px var(--color-kbd-shadow-3);
  margin: 0.125rem 0.1875rem;
  padding: 0.125rem 0.375rem;
}

.filename {
  margin: 0;
  padding: 0.5em 1em;
  background-color: var(--color-code-bg);
  color: var(--color-filename-text);
  font-family: var(--font-mono);
  font-size: 85%;
  border-radius: 5px 5px 0 0;
  box-shadow: var(--color-code-shadow);
  clip-path: inset(-10px -10px 0 -10px);
  position: relative;
  z-index: 1;
}

.filename + .highlighter-rouge {
  margin-top: -4px;
  position: relative;
  z-index: 2;
  background-color: var(--color-code-bg);
  border-radius: 0 0 5px 5px;
  box-shadow: var(--color-code-shadow);
  clip-path: inset(0 -10px -10px -10px);

  .highlight {
    border-radius: 0 0 5px 5px;
    box-shadow: none;

    pre {
      border-radius: 0 0 5px 5px;
      box-shadow: none;
    }
  }
}

.note {
  position: relative;
  border: 0;
  border-left: 4px solid var(--color-note);
  padding-left: 1.875rem;
}

.note:before {
  content: "\2139";
  font-size: 1.5em;
  left: 0.375rem;
  position: absolute;
  top: 0;
  color: var(--color-note);
}

.warning {
  border-left-color: var(--color-warning);
}

.warning:before {
  content: "\26A0";
  color: var(--color-warning);
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip-path: inset(50%);
  white-space: nowrap;
  border: 0;
}

